2017-02-02  Jean-Louis Martineau <JMartineau@carbonite.com>
	* config/amanda/syshacks.m4: Set BROKEN_SENDMSG on *-apple-darwin*
	* common-src/amutil.c: Do not use ambinf if BROKEN_SENDMSG

2017-02-02  Jean-Louis Martineau <JMartineau@carbonite.com>
	* config/amanda/amanda_configure.m4: Detect if we have getservbyport_r
	* common-src/amutil.c: use getservbyport if getservbyport_r is not
	  available
	* common-src/protocol.c: Use tread if HAVE_GETSERVBYNAME_R and
	  HAVE_GETSERVBYPORT_R

2017-02-02  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/ambsdtar.c: 'copyfile unpack (./.) failed' is normal
	  on restore

2017-02-01  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amutil.c (get_sse42): Add default function

2017-01-31  Jean-Louis Martineau <JMartineau@carbonite.com>
	* NEWS, ReleaseNotes: 3.4.2

2017-01-30  Jean-Louis Martineau <JMartineau@carbonite.com>
	Patch by Jason L Tibbitts III
	* server-src/amcheck.c: Remove spurious printf

2017-01-30  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/krb5-security.c (krb5_accept): Check result of setreuid

2017-01-24  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/ambsdtar.c: Add a SPARSE property, default to YES
	* man/xml-source/ambsdtar.8.xml: Document it.

2017-01-20  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Report/human.pm: Fix output

2017-01-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Script_App.pm: Use config_init_with_global

2017-01-18  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amgetconf.pl: Add build.amperldir
	* perl/Amanda/Paths.pm.in: Export $amperldir

2017-01-18  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/ammessage.c: Add storage to message
	* server-src/amtape.pl: Use storage AUTOLABEL
	* server-src/amcheck-device.pl: Use storage AUTOLABEL
	* server-src/amcheck.c: Use storage RUNTAPES and policy
	  retention-tapes